# mandlebrot_explorer

./: .gitignore  CMakeLists.txt  LISCENSE  Makefile  README.md
include/: config.h  rendering.h
src/: CMakeLists.txt  Makefile  config.cpp.def  mandlebrot_explorer.cpp  rendering.cpp
